--- a/client/src/app/core/footer/footer.component.html
+++ b/client/src/app/core/footer/footer.component.html
@@ -1,1 +1,3 @@
-<p>footer works!</p>
+<mat-toolbar color="primary" class="footer-text">
+   <span>© 2024 Jenny Guteva, Exam Project for SoftUni Angular course</span>
+</mat-toolbar>
