Created a Navigation component with buttons using Angular Material

--- a/client/src/app/core/home/home.component.html
+++ b/client/src/app/core/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+<h1>Welcome, book lovers!</h1>
+<div>
+   <h3>This page is still work in progress but it should be the home page.</h3>
+   <p>Hopefully I will be able to make it pretty</p>
+</div>
