--- a/client/src/app/shared/navigation/navigation.component.html
+++ b/client/src/app/shared/navigation/navigation.component.html
@@ -1,11 +1,20 @@
-<mat-toolbar color="primary">
-   <button mat-raised-button class="mat-raised-button" [routerLink]="['/']"><mat-icon>home</mat-icon>Home</button>
-   <button mat-raised-button class="mat-raised-button" [routerLink]="['/about']"><mat-icon> bubble_chart</mat-icon>About</button>
-   <button mat-raised-button class="mat-raised-button" [routerLink]="['/catalog']"><mat-icon>book</mat-icon>Book Catalog</button>
-   <button mat-raised-button class="mat-raised-button" [routerLink]="['/search']"><mat-icon>search</mat-icon>Search</button>
-   <button mat-raised-button class="mat-raised-button" color="accent" [routerLink]="['/login']"><mat-icon> transit_enterexit</mat-icon>Login</button>
-   <button mat-raised-button class="mat-raised-button" color="accent" [routerLink]="['/register']"><mat-icon>account_circle</mat-icon>Register</button>
-   <!-- Add more buttons as needed -->
-   <button mat-raised-button class="mat-raised-button" color="accent" [routerLink]="['/logout']"><mat-icon>exit_to_app</mat-icon>Logout</button>
-   <button mat-raised-button class="mat-raised-button" color="accent" [routerLink]="['/profile']"><mat-icon>color_lens</mat-icon>Profile</button>
- </mat-toolbar>
+<div class="mat-toolbar" color="#673AB7" fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="10px" fxLayoutAlign="center center">
+      <button mat-raised-button class="mat-raised-button" fxFlex="50%" fxFlex.lt-sm="100%" [routerLink]="['/']">
+         <mat-icon>home</mat-icon>Home</button>
+      <button mat-raised-button class="mat-raised-button" fxFlex="50%" fxFlex.lt-sm="100%" [routerLink]="['/about']">
+         <mat-icon> bubble_chart</mat-icon>About</button>
+      <button mat-raised-button class="mat-raised-button" fxFlex="50%" fxFlex.lt-sm="100%" [routerLink]="['/catalog']">
+         <mat-icon>book</mat-icon>Book Catalog</button>
+      <button mat-raised-button class="mat-raised-button" fxFlex="50%" fxFlex.lt-sm="100%" [routerLink]="['/search']">
+         <mat-icon>search</mat-icon>Search</button>
+      <button mat-raised-button class="mat-raised-button" fxFlex="50%" fxFlex.lt-sm="100%" color="accent" [routerLink]="['/login']">
+         <mat-icon>transit_enterexit</mat-icon>Login</button>
+      <button mat-raised-button class="mat-raised-button" fxFlex="50%" fxFlex.lt-sm="100%" color="accent" [routerLink]="['/register']">
+         <mat-icon>account_circle</mat-icon>Register</button>
+      <!-- Add more buttons as needed -->
+      <button mat-raised-button class="mat-raised-button" fxFlex="50%" fxFlex.lt-sm="100%" color="accent" [routerLink]="['/logout']">
+         <mat-icon>exit_to_app</mat-icon>Logout</button>
+      <button mat-raised-button class="mat-raised-button" fxFlex="50%" fxFlex.lt-sm="100%" color="accent" [routerLink]="['/profile']">
+         <mat-icon>color_lens</mat-icon>Profile</button>
+</div>
+<span></span>
