--- a/client/src/app/core/home/home.component.html
+++ b/client/src/app/core/home/home.component.html
@@ -1,6 +1,31 @@
-<h1>Welcome, book lovers!</h1>
-<div>
-   <h3>This page is still work in progress but it should be the home page.</h3>
-   <p>Hopefully I will be able to make it pretty</p>
+<div class="grid-container">
+   <div class="grid-item">
+      <h1 class="h1-title">Welcome, book lover!</h1>
+      <h3 class="h3-title">This is The Book Corner, where a group of friendly neighbors share their love of books by
+         lending each other
+         books!</h3>
+      <img src="../../../assets/img/lib_flowers.jpg" alt="flowers and books" class="responsive-image">
+   </div>
+   <div class="grid-item">
+      <p class="p-text">We do not take money, as we do this as a way to get know our neighbors better and build a
+         stronger community, with
+         the bonus of meeting likeminded people and enjoying new books and worlds to explore.</p>
+      <p class="p-text">You are free to explore our Book Catalog and take a look around, but if you want to join us,
+         please Register.
+         This way you will be able to share which parts of your home library you are willing to share and also pick a
+         book or two from the other users to read. Per mutual agreement, the books are lent for a 3-month period, but
+         depending on their length, you could contact the Book Owner via e-mail to extend that time.</p>
+      <p class="p-text">Below you can find the latest 5 additions to our library. We hope to pique your interest and for
+         you to become
+         a part of the community. Enjoy!</p>
+   </div>
+   <div class="grid-item">
+      <img src="../../../assets/img/books.avif" alt="book rows" class="responsive-image">
+      <p class="p-text">In case you have questions about this App and who made it, feel free to take a look at the About
+         page, where you will find the information of the App creator</p>
+   </div>
 </div>
-
+<div>
+   <h1 class="h1-second-title" position="center">The Book Corner</h1>
+   <!-- Your carousel here -->
+</div>
