--- a/client/src/app/shared/footer/footer.component.html
+++ b/client/src/app/shared/footer/footer.component.html
@@ -1,6 +1,8 @@
-<div class="mat-toolbar" fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="10px" fxLayoutAlign="center center">
-   <span class="footer-text" fxFlex="50%" fxFlex.lt-sm="100%">
-      <p>© The Book Corner is made by Jenny Guteva for SoftUni Angular Exam</p>
-      <p>March, 2024</p>
-   </span>
-</div>
+<footer>
+   <div class="mat-toolbar" fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="10px" fxLayoutAlign="center center">
+      <span class="footer-text" fxFlex="50%" fxFlex.lt-sm="100%">
+         <p>© The Book Corner is made by Jenny Guteva for SoftUni Angular Exam</p>
+         <p>March, 2024</p>
+      </span>
+   </div>
+</footer>
