--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,5 +1,30 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html {
+   height: 100%;
+   position: relative;
+   min-height: 100%;
+}
+
+body {
+   align-items: center;
+   height: 100vh;
+   margin: 0;
+   font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+footer {
+   position: absolute;
+   bottom: 0;
+   width: 100%;
+   height: 80px;
+   /* Adjust as needed */
+}
+
+@media (max-width: 480px){
+   footer { 
+       display : none; 
+       visibility : hidden; 
+   }
+}
