--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,3 @@
 <app-header></app-header>
-
 <router-outlet></router-outlet>
-
-<footer><app-footer></app-footer></footer>
+<app-footer></app-footer>
