--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -8,8 +8,7 @@ html {
 }
 
 body {
-   align-items: center;
-   height: 100vh;
+   height: 100%;
    margin: 0;
    font-family: Roboto, "Helvetica Neue", sans-serif;
 }
@@ -18,7 +17,7 @@ footer {
    position: absolute;
    bottom: 0;
    width: 100%;
-   height: 80px;
+   //height: 80px;
    /* Adjust as needed */
 }
 
