Added content to Error page

--- a/client/src/app/core/error/error.component.html
+++ b/client/src/app/core/error/error.component.html
@@ -1,1 +1,14 @@
-<h1>Ohh ou... Seems you have lost your way!</h1>
+<div class="grid-container">
+   <div class="grid-item">
+      <h1 class="h1-title">Ohh... you have lost your way!</h1>
+      <h3 class="h3-title">It seems that this corner of the library is not the one you are looking for!</h3>
+      <p class="p-text">We propose you go back to <a [routerLink]="['/']">Home from the navigation above or by clicking
+            on this looong sentence.</a></p>
+      <p class="p-text">Hope next time you will find the correct location! Though if issue persists, do contact the
+         App creator and provide them as much details, screenshots and information you can, so they can work on fixes. Thank you!
+      </p>
+   </div>
+   <div class="grid-item">
+      <img src="../../../assets/img/404.webp" alt="page not found" class="responsive-image">
+   </div>
+</div>
