Updated About page with content

--- a/client/src/app/core/about/about.component.html
+++ b/client/src/app/core/about/about.component.html
@@ -1,1 +1,31 @@
-<p>about works!</p>
+<div class="grid-container">
+   <div class="grid-item">
+      <h1 class="h1-title">Hello, nice to meet you! </h1>
+      <h3 class="h3-title">My name is Jenny Guteva and I am the person behind The Book Corner App!</h3>
+      <img src="../../../assets/img/JennyGuteva.jpg" alt="Jenny, author of the App" class="responsive-image">
+   </div>
+   <div class="grid-item">
+      <p class="p-text">First things first, thank you for visiting the App and the About page. As The Book Corner is a
+         student project, I would assume you are either one of my fellow students or one ouf our instructors. In both
+         case, hello!
+      </p>
+      <p class="p-text">If you are not a person from my classes, but a curious fella (or a lady) hello to you too and I
+         am happy that this App caught your eye!
+         Please be aware that this is an Angular App developed by me for my Angular course exam. I will not make
+         excuses, but just know it is beginner level and I do understand there is more to be required, but hey, Netflix,
+         Amazon, Google and FaceBook (or Rome as a matter of fact) were not build in a month.
+      </p>
+      <p class="p-text">As said, this App is not for commercial use and it is not intended to be deployed. It is meant
+         only to be used as project work for exam. That said, if you are the one examining me, I the experience was good enough.</p>
+      <p class="p-text">The idea for The Book Corner comes from my love of books, reading and traveling the world(s)
+         fueled by my imagination without even going outside. I would personally enjoy such an App and using it. If
+         you'd like to share something with me, reach out via one of the social links posted here. Thanks!</p>
+   </div>
+   <div class="grid-item">
+      <img src="../../../assets/img/contacts.jpg" alt="contacts image" class="responsive-image">
+      <p class="p-text">If you wish to get in touch with me, please use one of the following:</p>
+      <p class="p-text"><strong>Email:</strong><a href="mailto:jenny.guteva@gmail.com"> jenny.guteva@gmail.com</a></p>
+      <p class="p-text"><strong>LinkedIn:</strong><a href="https://www.linkedin.com/in/jenny-guteva-0978bba5/" target="_blank"> https://www.linkedin.com/in/jenny-guteva-0978bba5/</a></p>
+      <p class="p-text"><strong>GitHub:</strong><a href="https://github.com/Jenaldin" target="_blank"> https://github.com/Jenaldin</a></p>
+   </div>
+</div>
