--- a/client/src/app/books/catalog/catalog.component.html
+++ b/client/src/app/books/catalog/catalog.component.html
@@ -1,12 +1,26 @@
-<h3>catalog works!</h3>
-
-<div *ngIf="isLoading">
+<div class="center-div" *ngIf="isLoading">
    <mat-spinner></mat-spinner>
 </div>
-
-<div *ngIf="!isLoading" >
-   <div *ngFor="let book of books">
-      <h4>{{book.title}}</h4>
-      <hr>
-   </div>
-</div>
+<mat-paginator [length]="totalBooks" [pageSize]="12" (page)="pageChanged($event)"></mat-paginator>
+<mat-grid-list cols="3" rowHeight="1:0.7" *ngIf="!isLoading">
+   <mat-grid-tile class="catalog-grid" *ngFor="let book of books">
+      <mat-card>
+         <mat-card-header>
+            <mat-card-title-group>
+               <mat-card-title>{{book.title}}</mat-card-title>
+               <mat-card-subtitle>by {{book.author}}</mat-card-subtitle>
+               <img mat-card-lg-image src="{{book.coverUrl}}" alt="book cover">
+            </mat-card-title-group>
+         </mat-card-header>
+         <mat-card-content>
+            <p class="label">Book Owner:</p>
+            <p>{{book.owner.username}}</p>
+            <p class="label">Description by the Book Owner:</p>
+            <p>{{book.description}}</p>
+         </mat-card-content>
+         <mat-card-actions>
+            <button mat-button class="btn-bckgr">DETAILS</button>
+         </mat-card-actions>
+      </mat-card>
+   </mat-grid-tile>
+</mat-grid-list>
