--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -9,21 +9,21 @@ html {
 
 body {
    height: 100%;
-   margin: 0;
+   margin: 3px;
    font-family: Roboto, "Helvetica Neue", sans-serif;
+   display: flex;
+   flex-direction: column;
+   min-height: 100vh;
 }
 
 footer {
-   position: absolute;
-   bottom: 0;
-   width: 100%;
-   //height: 80px;
-   /* Adjust as needed */
+   margin-top: auto;
+   height: 80px;
 }
 
-@media (max-width: 480px){
-   footer { 
-       display : none; 
-       visibility : hidden; 
+@media (max-width: 480px) {
+   footer {
+      display: none;
+      visibility: hidden;
    }
 }
