--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -9,7 +9,7 @@ html {
 
 body {
    height: 100%;
-   margin: 3px;
+   margin: 0;
    font-family: Roboto, "Helvetica Neue", sans-serif;
    display: flex;
    flex-direction: column;
