--- a/client/src/app/books/view-book/view-book.component.html
+++ b/client/src/app/books/view-book/view-book.component.html
@@ -1,1 +1,23 @@
-<p>view-book works!</p>
+<div class="center-div" *ngIf="isLoading">
+   <mat-spinner></mat-spinner>
+</div>
+<div class="center-div" *ngIf="!isLoading">
+   <mat-card>
+      <mat-card-header>
+         <mat-card-title-group>
+            <mat-card-title>{{book.title}}</mat-card-title>
+            <mat-card-subtitle>by {{book.author}}</mat-card-subtitle>
+            <img mat-card-lg-image src="" alt="book cover">
+         </mat-card-title-group>
+      </mat-card-header>
+      <mat-card-content>
+         <p class="label">Book Owner:</p>
+         <p>{{book.owner.username}}</p>
+         <p class="label">Description by the Book Owner:</p>
+         <p>{{book.description}}</p>
+      </mat-card-content>
+      <mat-card-actions>
+         <button mat-button class="btn-bckgr" [routerLink]="['/catalog', book._id, 'edit-book']">EDIT</button>
+      </mat-card-actions>
+   </mat-card>
+</div>
