--- a/client/src/app/books/view-book/view-book.component.scss
+++ b/client/src/app/books/view-book/view-book.component.scss
@@ -4,3 +4,32 @@
    align-items: center;
    height: 100vh;
 }
+
+.top-div {
+   margin: 30px;
+   display: flex;
+   justify-content: center;
+   height: auto;
+}
+
+.label{
+   font-weight: bold;
+}
+
+.title{
+   font-size: larger;
+}
+
+.sub-title {
+   font-size: medium;
+   margin: 5px;
+}
+
+.mat-raised-button {
+   margin: 20px;
+}
+
+.stars {
+   display: flex;
+   align-items: center;
+}
