Added Spinner to static pages to keep consistency

--- a/client/src/app/core/about/about.component.html
+++ b/client/src/app/core/about/about.component.html
@@ -1,3 +1,7 @@
+<div class="center-div" *ngIf="isLoading">
+   <mat-spinner></mat-spinner>
+</div>
+
 <div class="grid-container">
    <div class="grid-item">
       <h1 class="h1-title">Hello, nice to meet you! </h1>
