--- a/client/src/app/core/error/error.component.html
+++ b/client/src/app/core/error/error.component.html
@@ -1,3 +1,7 @@
+<div class="center-div" *ngIf="isLoading">
+   <mat-spinner></mat-spinner>
+</div>
+
 <div class="grid-container">
    <div class="grid-item">
       <h1 class="h1-title">Ohh... you have lost your way!</h1>
