--- a/client/src/app/core/search/search.component.html
+++ b/client/src/app/core/search/search.component.html
@@ -1,2 +1,6 @@
+
+<div class="center-div" *ngIf="isLoading">
+   <mat-spinner></mat-spinner>
+</div>
+
 <p>search works!</p>
-<mat-spinner></mat-spinner>
