--- a/client/src/app/core/home/home.component.scss
+++ b/client/src/app/core/home/home.component.scss
@@ -1,1 +1,10 @@
 @import './../core.module.scss';
+
+.card-more-margin{
+   margin: 5px
+}
+
+.stars {
+   display: flex;
+   align-items: center;
+}
