--- a/client/src/app/books/catalog/catalog.component.scss
+++ b/client/src/app/books/catalog/catalog.component.scss
@@ -1,9 +1,4 @@
-.center-div {
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   height: 100vh;
-}
+@import './../books.module.scss';
 
 .header{
    margin-top: 30px;
@@ -28,7 +23,3 @@
    font-style: oblique;
 }
 
-.stars {
-   display: flex;
-   align-items: center;
-}
