Applied minor fixes

--- a/client/src/app/books/view-book/view-book.component.html
+++ b/client/src/app/books/view-book/view-book.component.html
@@ -51,7 +51,7 @@
          <p>{{book.owner.username}}</p>
       </mat-card-content>
       <mat-card-actions>
-         <button mat-raised-button class="mat-raised-button" color="primary"><mat-icon>view_list</mat-icon>View Book
+         <button mat-raised-button class="mat-raised-button" color="primary"><mat-icon> forum</mat-icon>View Book
             Comments</button>
          <button mat-raised-button class="mat-raised-button" color="accent"
             [routerLink]="['/catalog', book._id, 'edit-book']"><mat-icon>edit</mat-icon>Edit</button>
