Added basics for Add Book component in HTML and TS files

--- a/client/src/app/books/catalog/catalog.component.html
+++ b/client/src/app/books/catalog/catalog.component.html
@@ -50,7 +50,7 @@
             </mat-card-title-group>
          </mat-card-header>
          <mat-card-content>
-            <p class="label">Description by the Book Owner:</p>
+            <p class="label">Description / Resume by the Book Owner:</p>
             <p>{{book.description}}</p>
          </mat-card-content>
          <mat-card-actions>
