--- a/client/src/app/books/view-book/view-book.component.html
+++ b/client/src/app/books/view-book/view-book.component.html
@@ -45,7 +45,7 @@
       <mat-card-content>
          <div class="label">This Book is in:</div>
          <p>{{book.bookLang}}</p>
-         <div class="label">Description:</div>
+         <div class="label">Description / Resume:</div>
          <p>{{book.description}}</p>
          <div class="label">Book Owner:</div>
          <p>{{book.owner.username}}</p>
