Fixed <p> Description / Resume on View Book to not strech the card

--- a/client/src/app/books/view-book/view-book.component.html
+++ b/client/src/app/books/view-book/view-book.component.html
@@ -46,7 +46,7 @@
          <div class="label">This Book is in:</div>
          <p>{{book.bookLang}}</p>
          <div class="label">Description / Resume:</div>
-         <p>{{book.description}}</p>
+         <p style="max-width: 650px;">{{book.description}}</p>
          <div class="label">Book Owner:</div>
          <p>{{book.owner.username}}</p>
       </mat-card-content>
