Started work on Edit Book functionality

--- a/client/src/app/books/add-book/add-book.component.html
+++ b/client/src/app/books/add-book/add-book.component.html
@@ -6,7 +6,7 @@
       <mat-card-header>
          <mat-card-title-group>
             <mat-card-title>
-               <h2 class="title">Add a New Book to The Book Corner!</h2>
+               <h2 class="title"><mat-icon>add_circle_outline</mat-icon> Add a New Book to The Book Corner!</h2>
             </mat-card-title>
          </mat-card-title-group>
       </mat-card-header>
