Added some basic error handling, server to send errors to client

--- a/client/src/app/books/catalog/catalog.component.html
+++ b/client/src/app/books/catalog/catalog.component.html
@@ -2,16 +2,19 @@
    <mat-spinner></mat-spinner>
 </div>
 
-<div class="header">
-   <p>The Book Corner Catalog</p>
-</div>
-<div class="header">
-   <button mat-raised-button color="accent" [routerLink]="['/add-book']"><mat-icon>add_circle_outline</mat-icon> Add New
-      Book!</button>
-</div>
+<div *ngIf="!isLoading">
+   <div class="header">
+      <p>The Book Corner Catalog</p>
+   </div>
+   <div class="header">
+      <button mat-raised-button color="accent" [routerLink]="['/add-book']"><mat-icon>add_circle_outline</mat-icon> Add
+         New
+         Book!</button>
+   </div>
 
-<mat-paginator class="pagin-font" [length]="totalBooks" [pageSize]="12" (page)="pageChanged($event)"></mat-paginator>
-<hr>
+   <mat-paginator class="pagin-font" [length]="totalBooks" [pageSize]="12" (page)="pageChanged($event)"></mat-paginator>
+   <hr>
+</div>
 
 <mat-grid-list cols="3" rowHeight="1:0.7" *ngIf="!isLoading">
    <mat-grid-tile class="catalog-grid-tile" *ngFor="let book of books">
