--- a/client/src/app/books/catalog/catalog.component.html
+++ b/client/src/app/books/catalog/catalog.component.html
@@ -15,7 +15,7 @@
    (page)="pageChanged($event)"></mat-paginator>
 <hr>
 
-<mat-grid-list cols="3" rowHeight="1:0.7" *ngIf="!isLoading">
+<mat-grid-list cols="3" rowHeight="1:0.6" *ngIf="!isLoading">
    <mat-grid-tile class="catalog-grid-tile" *ngFor="let book of books">
       <mat-card>
          <mat-card-header>
@@ -53,7 +53,8 @@
          </mat-card-header>
          <mat-card-content>
             <p class="label">Description / Resume by the Book Owner:</p>
-            <p>{{book.description}}</p>
+            <p style="max-width: 550px;">{{book.description.substring(0, 200)}}...</p>
+            <br>
          </mat-card-content>
          <mat-card-actions>
             <button mat-raised-button color="primary"
