Applied small changes to text in <p> on page not found

--- a/client/src/app/core/not-found/not-found.component.html
+++ b/client/src/app/core/not-found/not-found.component.html
@@ -7,7 +7,7 @@
       <h1 class="h1-title">Ohh... you have lost your way!</h1>
       <h3 class="h3-title">It seems that this corner of the library is not the one you are looking for!</h3>
       <p class="p-text">We propose you go back to <a [routerLink]="['/']">Home from the navigation above or by clicking
-            on this looong sentence.</a></p>
+            on this long sentence.</a></p>
       <p class="p-text">Hope next time you will find the correct location! Though if issue persists, do contact the
          App creator and provide them as much details, screenshots and information you can, so they can work on fixes. Thank you!
       </p>
