--- a/client/src/app/users/login/login.component.html
+++ b/client/src/app/users/login/login.component.html
@@ -1,1 +1,7 @@
-<p>login works!</p>
+<div class="center-div" *ngIf="isLoading">
+   <mat-spinner></mat-spinner>
+</div>
+<div class="top-div" *ngIf="!isLoading">
+   <h1>login works!</h1>
+</div>
+
