--- a/client/src/app/users/register/register.component.html
+++ b/client/src/app/users/register/register.component.html
@@ -1,1 +1,6 @@
-<p>register works!</p>
+<div class="center-div" *ngIf="isLoading">
+   <mat-spinner></mat-spinner>
+</div>
+<div class="top-div" *ngIf="!isLoading">
+   <h1>register works!</h1>
+</div>
